--- a/ocs-youth-disconnection-case-study.Rmd
+++ b/ocs-youth-disconnection-case-study.Rmd
@@ -43,7 +43,7 @@ div.red { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
 **This is a real example of the above**
 
 <style>
-div.green { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
+div.red { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "red">
 
@@ -51,6 +51,8 @@ div.green { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
 
 *"css: style.css" is not included in the YAML metadata for this document.*
 </div>
+
+**This is a another real example of the above**
 
 <style>
 #TOC {
@@ -63,7 +65,7 @@ div.green { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
 
 
 <style>
-div.green { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
+div.red { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "red">
 
@@ -462,6 +464,16 @@ We then combine the objects with the `dplyr::bind_rows()` function.
 
 The process is now very similar to the previous table.
 
+<style>
+div.red { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "red">
+
+**MICHAEL ONTIVEROS**
+
+*I used base R to remove the first three rows of a dataframe in the following chunk. I am not aware of a tidyverse solution for this; I am sure one exists.*
+</div>
+
 ```{r}
 df2 <- bind_rows(df2a,
           df2b,
@@ -508,14 +520,19 @@ df2 <- df2 %>%
                             str_detect(Group, "Male") ~ FALSE,
                             TRUE ~ NA),
          Subgroup = str_remove_all(Group,
-                                   pattern = paste(c("Female","Male","UnitedStates"),
+                                   pattern = paste(c("Female",
+                                                     "Male",
+                                                     "ASIAN",
+                                                     "Asian"),
                                                collapse = "|"))) %>%
   mutate(Subgroup = na_if(Subgroup, ""))
 
 glimpse(df2)
 
+df2 <- df2[-(1:3),]
+
 df2 <- df2 %>% 
-  mutate(Type = case_when(is.na(Gender) & is.na(Subgroup) ~ "US Total",
+  mutate(Type = case_when(is.na(Gender) & is.na(Subgroup) ~ "Asian Total",
                           is.na(Gender) & !is.na(Subgroup) ~ "Subgroup Total",
                           !is.na(Gender) & is.na(Subgroup) ~ "Gender Total",
                           TRUE ~ "Subgroup Total"))
@@ -588,7 +605,7 @@ We fix the typos.
 df2_2018 <- df2_2018 %>%
   strsplit("\n") %>%
   unlist() %>%
-  gsub(" B44 ","5.4",.) %>%
+  gsub(" B44 ","54",.) %>%
   gsub("Women74","Women 74",.) %>%
   gsub("HMONG102","HMONG 102",.) %>%
   as_tibble()
@@ -608,14 +625,14 @@ df2_2018 <- df2_2018 %>%
 df2_2018 <- lapply(df2_2018,
                    function(x) x[nchar(x) >= 1])
 
-df3a_2018 <- df2_2018 %>%
+df2a_2018 <- df2_2018 %>%
   map(~paste(.,collapse = "")) %>%
   map(~gsub("[[:digit:]]+|[[:punct:]]+", "",.)) %>%
   do.call(rbind,.) %>%
   data.frame() %>%
   tibble()
 
-df3b_2018 <- map(df2_2018, tail, 2) %>%
+df2b_2018 <- map(df2_2018, tail, 2) %>%
   do.call(rbind,.) %>%
   data.frame() %>%
   mutate_if(is.character, as.numeric) %>%
@@ -624,8 +641,8 @@ df3b_2018 <- map(df2_2018, tail, 2) %>%
 
 rm(df2_2018)
   
-df2_2018 <- bind_cols(df3a_2018,
-                      df3b_2018)
+df2_2018 <- bind_cols(df2a_2018,
+                      df2b_2018)
 names(df2_2018) <- c()
 
 column_names <- c("Group",
@@ -673,6 +690,44 @@ df2_2018 <- df2_2018 %>%
   dplyr::select(-Group)
 ```
 
+The dataframe we produced does not contain totals. 
+
+```{r}
+df2_2018 %>%
+  print(., n = dim(.)[1])
+```
+
+We can find these totals in the PDF directly and create rows as needed
+
+We load the PDF.
+
+```{r}
+excerpt <- image_read(here("asian_youth_excerpt.png"))
+
+excerpt
+```
+
+We add the rows.
+
+```{r}
+df2_2018 <- df2_2018 %>%
+  add_row(Rate = 6.2,
+          Year = 2018,
+          Gender = "ALL",
+          Subgroup = "ALL", 
+          Type = "ASIAN TOTAL") %>%
+  add_row(Rate = 6.1,
+          Year = 2018,
+          Gender = "FEMALE",
+          Subgroup = "ALL", 
+          Type = "GENDER TOTAL") %>%
+  add_row(Rate = 6.4,
+          Year = 2018,
+          Gender = "MALE",
+          Subgroup = "ALL", 
+          Type = "GENDER TOTAL")
+```
+
 ```{r}
 df2 <- bind_rows(df2,
                  df2_2018)
@@ -683,7 +738,7 @@ We repeat this process again for Latino/a subgroups.
 The table, without the special formatting, looks like this.
 
 ```{r}
-image3 <- image_read(here("latino_subgroups.png"))
+image3 <- image_read(here("latino_a_subgroups.png"))
 ```
 
 There are no whitespaces in this table.
@@ -800,7 +855,7 @@ df3 <- df3 %>%
 glimpse(df3)
 
 df3 <- df3 %>% 
-  mutate(Type = case_when(is.na(Gender) & is.na(Subgroup) ~ "Latino Total",
+  mutate(Type = case_when(is.na(Gender) & is.na(Subgroup) ~ "Latino/a Total",
                           is.na(Gender) & !is.na(Subgroup) ~ "Subgroup Total",
                           !is.na(Gender) & is.na(Subgroup) ~ "Gender Total",
                           TRUE ~ "Subgroup Total"))
@@ -833,7 +888,7 @@ Let's add the 2018 data to this dataframe.
 We import the image. 
 
 ```{r}
-image5 <- image_read(here("latino_subgroups_2018.png"))
+image5 <- image_read(here("latino_a_subgroups_2018.png"))
 
 df3_2018 <- magick::image_ocr(image5)
 ```
@@ -935,6 +990,36 @@ df3_2018 <- df3_2018 %>%
                               TRUE ~ Subgroup))
 ```
 
+We load the PDF.
+
+```{r}
+rm(excerpt)
+excerpt <- image_read(here("latino_a_youth_excerpt.png"))
+
+excerpt
+```
+
+We add the rows.
+
+```{r}
+df3_2018 <- df3_2018 %>%
+  add_row(Rate = 12.8,
+          Year = 2018,
+          Gender = "ALL",
+          Subgroup = "ALL", 
+          Type = "LATINO/A TOTAL") %>%
+  add_row(Rate = 13.3,
+          Year = 2018,
+          Gender = "FEMALE",
+          Subgroup = "ALL", 
+          Type = "GENDER TOTAL") %>%
+  add_row(Rate = 12.3,
+          Year = 2018,
+          Gender = "MALE",
+          Subgroup = "ALL", 
+          Type = "GENDER TOTAL")
+```
+
 We add the 2018 data to the dataframe
 
 ```{r}
@@ -946,7 +1031,47 @@ df3 <- bind_rows(df3,
 
 We will use multiple images to import the data on page 36 to produce maps. 
 
+<style>
+div.red { background-color:#ffcccb; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "red">
+
+**MICHAEL ONTIVEROS**
+
+*This code is not complete. If there is time, we will return to it! Magick is having trouble with quadrant 1 and 4. I could not figure out why.*
+</div>
+
 ```{r, eval=FALSE}
+quadrant1 <- image_read(here("state_quadrant1.png"))
+quadrant2 <- image_read(here("state_quadrant2.png"))
+quadrant3 <- image_read(here("state_quadrant3.png"))
+quadrant4 <- image_read(here("state_quadrant4.png"))
+
+quadrant1 <- magick::image_ocr(quadrant1)
+quadrant2 <- magick::image_ocr(quadrant2)
+quadrant3 <- magick::image_ocr(quadrant3)
+quadrant4 <- magick::image_ocr(quadrant4)
+
+labels_quad1_3 <- paste0(quadrant1, quadrant3)
+labels_quad2_4 <- paste0(quadrant2, quadrant4)
+
+labels_quad1_3 <- labels_quad1_3 %>%
+  strsplit("\n") %>%
+  unlist() %>%
+  as_tibble()
+
+labels_quad2_4 <- labels_quad2_4 %>%
+  strsplit("\n") %>%
+  unlist() %>%
+  as_tibble()
+
+df1 <- df1 %>%
+  dplyr::select(value) %>%
+  pull(value) %>%
+  str_split(" ")
+```
+
+```{r, eval= FALSE}
 data_map <- map_data("state") %>%
   filter(region=="california")
 
@@ -1024,6 +1149,13 @@ We can build off of this idea, using a custom color palette to create a gradient
 ```{r}
 custom_pal <- colorRampPalette(c("white", "#008393"))
 gender_n <- 3
+
+asian_total <- df2 %>%
+  filter(Year == 2017) %>%
+  filter(Gender == "ALL",
+         Subgroup == "ALL") %>%
+  pull(Rate)
+
 df2 %>%
   filter(Year == 2017) %>%
   complete(Gender, Subgroup) %>%
@@ -1034,12 +1166,15 @@ df2 %>%
   ungroup() %>%
   mutate(Subgroup = fct_reorder(Subgroup, rank_all)) %>%
   ggplot(aes(x = Subgroup, y = Rate, fill = Gender)) +
+  geom_hline(yintercept = asian_total, 
+             color = "black",
+             linetype = 2) + 
   geom_bar(stat = "identity",
            color = "transparent",
            size = 0.5,
            position = "dodge",
            width = 0.5) +
-  labs(title = "FIGURE 2 YOUTH DISCONNECTION BY ASIAN SUBGROUP, 2017",
+  labs(title = "FIGURE X YOUTH DISCONNECTION BY ASIAN SUBGROUP, 2017",
        subtitle = "ORDERED BY OVERALL DISCONNECTION",
        y = "YOUTH DISCONNECTION (%)",
        fill = "Gender") +
@@ -1052,13 +1187,32 @@ df2 %>%
                              color = "#008393",
                              face = "bold"),
         axis.title.x = element_blank(),
-        axis.text.x = element_text(angle = 90, hjust = 1))
+        axis.text.x = element_text(angle = 90, hjust = 1)) +
+  annotate("text", label = 'bold("ASIAN TOTAL")',
+           color = "#008393", 
+           size = 3,
+           x = 1.2,
+           y = asian_total + 1,
+           parse = TRUE)
 ```
+
+From the above plot, it becomes apparent that the Hmong subgroup produces a small proportion of the total number of asian disconnected youth. The Asian total youth disconnection rate is more alike the youth disconnection rates for all other subgroups than the Hmong youth disconnection rate.
+
+We can confirm this by revisiting the table.
+
+```{r}
+image2
+```
+
+The Hmong group represents `r round((8300*100)/145600)`% of all Asian disconnected youth. 
+
+This shows the importance of adding small details such as the composite line to plots. It helps provide a simple yet nuanced picture of what is going on. 
 
 Lastly, we can add annotations to add provide even more depth to the visualization. 
 
 ```{r}
-latino_total <- df3 %>%
+latino_a_total <- df3 %>%
+  filter(Year == 2017) %>%
   filter(Gender == "ALL",
          Subgroup == "ALL") %>%
   pull(Rate)
@@ -1073,7 +1227,7 @@ df3 %>%
   ungroup() %>%
   mutate(Subgroup = fct_reorder(Subgroup, rank_all)) %>%
   ggplot(aes(x = Subgroup, y = Rate, fill = Gender)) +
-  geom_hline(yintercept = latino_total, 
+  geom_hline(yintercept = latino_a_total, 
              color = "black",
              linetype = 2) + 
   geom_bar(stat = "identity",
@@ -1099,8 +1253,82 @@ df3 %>%
            color = "#008393", 
            size = 3,
            x = 1.2,
-           y = latino_total + 1,
+           y = latino_a_total + 1,
            parse = TRUE)
+```
+
+```{r}
+df2 %>%
+  complete(Gender, Subgroup, Year) %>%
+  group_by(Subgroup) %>%
+  mutate(missing = sum(is.na(Rate))) %>%
+  filter(missing == 0) %>%
+  dplyr::select(-missing) %>%
+  ungroup() %>%
+  group_by(Gender) %>%
+  mutate(sub_rank = rank(Rate, ties.method = "min")) %>%
+  group_by(Subgroup, Year) %>%
+  mutate(rank_all = sub_rank[Gender == "ALL"]) %>%
+  ungroup() %>%
+  mutate(Subgroup = fct_reorder(Subgroup, rank_all)) %>%
+  ggplot(aes(x = Subgroup, y = Rate, fill = Gender)) +
+  facet_wrap(Year ~., ncol = 1) +
+  geom_bar(stat = "identity",
+           color = "transparent",
+           size = 0.5,
+           position = "dodge",
+           width = 0.5) +
+  labs(title = "FIGURE X YOUTH DISCONNECTION BY ASIAN SUBGROUP, 2017-2018",
+       subtitle = "ORDERED BY OVERALL DISCONNECTION",
+       y = "YOUTH DISCONNECTION (%)",
+       fill = "Gender") +
+  scale_fill_manual(values = rev(custom_pal(gender_n + 1))) +
+  scale_y_continuous(breaks = seq(0,10,2),
+                     labels = seq(0,10,2),
+                     limits = c(0,10)) +
+  theme_classic() +
+  theme(title = element_text(size = 10,
+                             color = "#008393",
+                             face = "bold"),
+        axis.title.x = element_blank(),
+        axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+```{r}
+df3 %>%
+  complete(Gender, Subgroup, Year) %>%
+  group_by(Subgroup) %>%
+  mutate(missing = sum(is.na(Rate))) %>%
+  filter(missing == 0) %>%
+  dplyr::select(-missing) %>%
+  ungroup() %>%
+  group_by(Gender) %>%
+  mutate(sub_rank = rank(Rate, ties.method = "min")) %>%
+  group_by(Subgroup, Year) %>%
+  mutate(rank_all = sub_rank[Gender == "ALL"]) %>%
+  ungroup() %>%
+  mutate(Subgroup = fct_reorder(Subgroup, rank_all)) %>%
+  ggplot(aes(x = Subgroup, y = Rate, fill = Gender)) +
+  facet_wrap(Year ~., ncol = 1) +
+  geom_bar(stat = "identity",
+           color = "transparent",
+           size = 0.5,
+           position = "dodge",
+           width = 0.5) +
+  labs(title = "FIGURE X YOUTH DISCONNECTION BY LATINO/A SUBGROUP, 2017",
+       subtitle = "ORDERED BY OVERALL DISCONNECTION",
+       y = "YOUTH DISCONNECTION (%)",
+       fill = "Gender") +
+  scale_fill_manual(values = rev(custom_pal(gender_n + 1))) +
+  scale_y_continuous(breaks = seq(0,20,2),
+                     labels = seq(0,20,2),
+                     limits = c(0,20)) +
+  theme_classic() +
+  theme(title = element_text(size = 10,
+                             color = "#008393",
+                             face = "bold"),
+        axis.title.x = element_blank(),
+        axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
 ## **Summary**
